# Titanic-Analysis

./: EDA-analysis.csv  predictive analysis.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
Time-Series-Analysis/titanic/: dashboard.py  diagram.drawio  model_analysis_results.pkl  predict_result_1.csv  predict_result_2.csv  predictive analysis.ipynb  predictive_analysis.ipynb
titanic/: analysis.ipynb  main.py  pyproject.toml
titanic-dashboard/: dashboard.py  model_analysis_results.pkl  requirements.txt
