[project]
name = "titanic-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=4.0.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "seaborn>=0.13.2",
    "standard-imghdr>=3.13.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.19.0",
]
